--- a/renovation budget management/src/scss/elements/_header.scss
+++ b/renovation budget management/src/scss/elements/_header.scss
@@ -8,21 +8,31 @@
   cursor: pointer;
   padding-left: 15rem;
   padding-right: 15rem;
-  padding-bottom: 1rem;
+  padding-bottom: 1.75rem;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
 .submenu {
   list-style: none;
-
+  gap: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   padding-right: 10rem;
+  padding-bottom: 3rem;
 }
 
 .submenu li {
   display: flex;
   align-items: center;
   gap: 30px;
+}
+
+.submenu li a {
+  text-decoration: none;
+  color: white;
+}
+
+.submenu li a:hover {
+  color: #007bff;
 }
