--- a/renovation budget management/src/scss/elements/_home.scss
+++ b/renovation budget management/src/scss/elements/_home.scss
@@ -2,12 +2,14 @@
     display: flex;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-    margin-top: 20px;
-    padding: 10px;
-}
+//.my-chart {
+//    width: 50px;
+//    height: 50px;
+//}
+//.chart {
+//    max-height: 100px;
+//    max-width: 100px;
+//}
 
 .summary {
     display: flex;
